; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/tcop/extr_postgres.c_stack_is_too_deep.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/tcop/extr_postgres.c_stack_is_too_deep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stack_base_ptr = common dso_local global i8* null, align 8
@max_stack_depth_bytes = common dso_local global i64 0, align 8
@register_stack_base_ptr = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @stack_is_too_deep() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8, align 1
  %3 = alloca i64, align 8
  %4 = load i8*, i8** @stack_base_ptr, align 8
  %5 = ptrtoint i8* %4 to i64
  %6 = ptrtoint i8* %2 to i64
  %7 = sub i64 %5, %6
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %0
  %11 = load i64, i64* %3, align 8
  %12 = sub nsw i64 0, %11
  store i64 %12, i64* %3, align 8
  br label %13

13:                                               ; preds = %10, %0
  %14 = load i64, i64* %3, align 8
  %15 = load i64, i64* @max_stack_depth_bytes, align 8
  %16 = icmp sgt i64 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %13
  %18 = load i8*, i8** @stack_base_ptr, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %17
  store i32 1, i32* %1, align 4
  br label %22

21:                                               ; preds = %17, %13
  store i32 0, i32* %1, align 4
  br label %22

22:                                               ; preds = %21, %20
  %23 = load i32, i32* %1, align 4
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
